--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.4",
     "axios": "^1.7.9",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.469.0",
     "next": "^15.1.3",
     "react": "^18.3.1",
