--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,3 +1,5 @@
 VITE_REGISTER_USER_API='http://localhost:4000/user/register'
 VITE_LOGIN_USER_API='http://localhost:4000/user/login'
+VITE_SEND_OTP_API='http://localhost:4000/user/send-mail'
+VITE_VERIFY_OTP_API='http://localhost:4000/user/verify-otp'
 
