--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.4",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.9",
     "gsap": "^3.12.5",
     "lucide-react": "^0.469.0",
