--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.1.4",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.9",
+    "framer-motion": "^11.16.4",
     "gsap": "^3.12.5",
     "lucide-react": "^0.469.0",
     "next": "^15.1.3",
