--- a/Frontend/.env
+++ b/Frontend/.env
@@ -3,4 +3,5 @@ VITE_LOGIN_USER_API='http://localhost:4000/user/login'
 VITE_SEND_OTP_API='http://localhost:4000/user/send-mail'
 VITE_VERIFY_OTP_API='http://localhost:4000/user/verify-otp'
 VITE_LOGIN_ADMIN_API='http://localhost:4000/admin/login'
+VITE_BASE_URL='http://localhost:4000'
 
